# bookings_project_v1

./: .env-non-dev  Dockerfile  README.md  docker-compose.yml  grafana-dashboard.json  prometheus.yml  pyproject.toml  requirements.txt
app/: config.py  conftest.py  database.py  exceptions.py  main.py  utils.py
app/admin/: auth.py  views.py
app/bookings/: dao.py  models.py  router.py  schemas.py
app/dao/: base.py
app/hotels/: dao.py  models.py  router.py  schemas.py
app/hotels/rooms/: dao.py  models.py  router.py  schemas.py
app/images/: router.py
app/migrations/: env.py
app/pages/: router.py
app/prometheus/: router.py
app/static/css/: navbar.css
app/tasks/: celery.py  email_templates.py  tasks.py
app/templates/: base.html  hotels.html
app/templates/auth/: login.html  register.html
app/templates/bookings/: booking_successful.html  bookings.html
app/templates/hotels_and_rooms/: hotels.html  rooms.html
app/tests/: conftest.py
app/tests/integration_tests/test_bookings/: test_api.py  test_dao.py
app/tests/integration_tests/test_hotels/: test_api.py
app/tests/unit_tests/test_hotels/: test_dao.py
app/tests/unit_tests/test_users/: test_dao.py
app/users/: auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py
