[tool.poetry]
name = "fast_api"
version = "0.1.0"
description = ""
authors = ["Sauberr <sauberr10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.101.0"}
sqlalchemy = "^2.0.19"
alembic = "^1.11.2"
asyncpg = "^0.28.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-jose = "^3.3.0"
flake8 = "^6.1.0"
fastapi-cache = {extras = ["redis"], version = "^0.1.0"}
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
celery = "^5.3.1"
flower = "^2.0.1"
pillow = "^10.0.0"
sqladmin = "^0.14.1"
pytest = "^7.4.0"
httpx = "^0.24.1"
pytest-asyncio = "^0.21.1"
black = "^23.7.0"
isort = "^5.12.0"
pyright = "^1.1.324"
autoflake = "^2.2.0"
python-json-logger = "^2.0.7"
sentry-sdk = {extras = ["fastapi"], version = "^1.29.2"}
fastapi-versioning = "^0.10.0"
gunicorn = "^21.2.0"
prometheus-fastapi-instrumentator = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.autoflake]
check_diff = true
imports = ["sqlalchemy", "app"]

[tool.pyright]
include = ["app"]
